# langchain_werewolf

./: README.md  README.md.j2  pyproject.toml  update_readme.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: automatically-update-readme.yml  code-style-check-workflow-call.yaml  pytest-workflow-call.yaml  static-type-check-workflow-call.yaml
examples/config/: config_example1.json  config_human_participates_example1.json
langchain_werewolf/: const.py  enums.py  io.py  llm_utils.py  main.py  setup.py  utils.py
langchain_werewolf/game/: chat.py  check_result.py  elimination.py  main.py  night_action.py  prompts.py  setup.py  utils.py  vote.py
langchain_werewolf/game_players/: __init__.py  base.py  const.py  fortune_teller.py  helper.py  knight.py  player_sides.py  registry.py  utils.py  villager.py  werewolf.py
langchain_werewolf/models/: config.py  general.py  state.py
streamlit_langchain_werewolf/: app.py  const.py  io.py  logic.py  main.py  model.py  run.py  session.py  validator.py
streamlit_langchain_werewolf/view/: __init__.py  chatspace.py  finish.py  header.py  quit.py  setup.py  utils.py
tests/: conftest.py  test_io.py  test_llm_utils.py  test_main.py  test_setup.py  test_utils.py
tests/game/: test_chat.py  test_check_result.py  test_elimination.py  test_night_action.py  test_setup.py  test_utils.py  test_vote.py
tests/game_players/: test_base.py  test_fortune_teller.py  test_helper.py  test_knight.py  test_registry.py  test_utils.py
tests/models/: test_general.py  (+1 more)
(+8 files in other folders)
