[project]
name = "langchain_werewolf"
version = "0.0.0a0"
description = "A CUI-based simple werewolf game with `langchain` and `langgraph`"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "langchain>=0.3.0",
    "langchain-community",
    "langchain-groq>=0.1.9",
    "langchain-google-genai>=1.0.10",
    "langchain-openai",
    "langgraph>=0.2.22",
    "python-dotenv>=1.0.1",
    "pygraphviz>=1.13",
]
authors = [{ name = "hmasdev" }]
maintainers = [{ name = "hmasdev" }]
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "flaky>=3.8.1",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "jinja2>=3.1.4",
]
streamlit = ["streamlit>=1.0.0"]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "flaky>=3.8.1",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "jinja2>=3.1.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=langchain_werewolf --cov-report=term-missing --cov-report=xml -m 'not integration'"
markers = ["integration: mark a test as an integration test"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ['flaky']
ignore_missing_imports = true
